--- a/PC CAFFE/PC CAFFE.csproj
+++ b/PC CAFFE/PC CAFFE.csproj
@@ -596,10 +596,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>NarudzbeNaStoluDataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Include="Report\Usklada skladista\UskladaSkladistaReportForm.cs">
+    <Compile Include="Report\Usklada_skladista\UskladaSkladistaReportForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Report\Usklada skladista\UskladaSkladistaReportForm.Designer.cs">
+    <Compile Include="Report\Usklada_skladista\UskladaSkladistaReportForm.Designer.cs">
       <DependentUpon>UskladaSkladistaReportForm.cs</DependentUpon>
     </Compile>
     <Compile Include="SQL\SQLusklada_skladista.cs" />
@@ -1845,10 +1845,10 @@
       <DependentUpon>FrmNarudzbeNaStolu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Report\NaruzdbeNaStolu\ReportNarudzbeNaStolu.rdlc" />
-    <EmbeddedResource Include="Report\Usklada skladista\UskladaSkladistaReportForm.resx">
+    <EmbeddedResource Include="Report\Usklada_skladista\UskladaSkladistaReportForm.resx">
       <DependentUpon>UskladaSkladistaReportForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Report\Usklada skladista\UskladaSkladistaReport.rdlc" />
+    <EmbeddedResource Include="Report\Usklada_skladista\UskladaSkladistaReport.rdlc" />
     <EmbeddedResource Include="SveUskladaRobeNaSkladistuForm.resx">
       <DependentUpon>SveUskladaRobeNaSkladistuForm.cs</DependentUpon>
     </EmbeddedResource>
