--- a/PC CAFFE/PC CAFFE.csproj
+++ b/PC CAFFE/PC CAFFE.csproj
@@ -591,16 +591,16 @@
     <Compile Include="frmPotrosniMaterijal.designer.cs">
       <DependentUpon>frmPotrosniMaterijal.cs</DependentUpon>
     </Compile>
+    <Compile Include="Report\Izdatnica\FormIzdatnicaReport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Report\Izdatnica\FormIzdatnicaReport.Designer.cs">
+      <DependentUpon>FormIzdatnicaReport.cs</DependentUpon>
+    </Compile>
     <Compile Include="Report\Izdatnica\IzdatnicaDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>IzdatnicaDataSet.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="Report\Izdatnica\ReportIzdatnica.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Report\Izdatnica\ReportIzdatnica.Designer.cs">
-      <DependentUpon>ReportIzdatnica.cs</DependentUpon>
     </Compile>
     <Compile Include="Report\NaruzdbeNaStolu\FrmNarudzbeNaStolu.cs">
       <SubType>Form</SubType>
@@ -1863,9 +1863,10 @@
     <EmbeddedResource Include="frmSinkronizacija.resx">
       <DependentUpon>frmSinkronizacija.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Report\Izdatnica\ReportIzdatnica.resx">
-      <DependentUpon>ReportIzdatnica.cs</DependentUpon>
+    <EmbeddedResource Include="Report\Izdatnica\FormIzdatnicaReport.resx">
+      <DependentUpon>FormIzdatnicaReport.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Report\Izdatnica\ReportIzdatnica.rdlc" />
     <EmbeddedResource Include="Report\NaruzdbeNaStolu\FrmNarudzbeNaStolu.resx">
       <DependentUpon>FrmNarudzbeNaStolu.cs</DependentUpon>
     </EmbeddedResource>
